2011-11-09  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Build system cleanup
        https://bugs.webkit.org/show_bug.cgi?id=71815

        Reviewed by Kenneth Rohde Christiansen.

        * Target.pri: Removed duplicated sources that are compiled also into QtWebKit.so through api.pri.
        * UIProcess/qt/WebGeolocationProviderQt.cpp: Include the moc file here, as it should only be compiled
        if geolocation is enabled.
        * UIProcess/qt/WebGeolocationProviderQt.h: Provide ENABLE(GEOLOCATION) guards around class definition.

2011-11-08  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt] Replace use of QApplication with QGuiApplication
        https://bugs.webkit.org/show_bug.cgi?id=71794

        Reviewed by Andreas Kling.

        * Platform/CoreIPC/unix/ConnectionUnix.cpp: Remove unnecessary QApplication inclusion.
        * Platform/qt/RunLoopQt.cpp: Replace QApplication include with QCoreApplication.
        * UIProcess/Launcher/qt/ProcessLauncherQt.cpp: Ditto.
        * UIProcess/Launcher/qt/ThreadLauncherQt.cpp: Remove unnecessary QApplication inclusion.
        * UIProcess/qt/QtWebPageProxy.cpp:
        (QtWebPageProxy::handleMousePressEvent): Replace QApplication usage with QStyleHints.
        (QtWebPageProxy::handleMouseDoubleClickEvent): Ditto.

2011-11-07  Adam Barth  <abarth@webkit.org>

        Move static "policy" state from SecurityOrigin.cpp to SecurityPolicy.cpp
        https://bugs.webkit.org/show_bug.cgi?id=71755

        Reviewed by Eric Seidel.

        * WebProcess/InjectedBundle/InjectedBundle.cpp:
        (WebKit::InjectedBundle::addOriginAccessWhitelistEntry):
        (WebKit::InjectedBundle::removeOriginAccessWhitelistEntry):
        (WebKit::InjectedBundle::resetOriginAccessWhitelists):
        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::loadURL):

2011-11-08  Brent Fulgham  <bfulgham@webkit.org>

        [WinCairo] Unreviewed build fix after r99613.
